--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "vue-chartjs": "^3.5.1",
-    "vue-jalali-moment": "^1.0.0"
+    "vue-jalali-moment": "^1.0.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
